--- a/index.html
+++ b/index.html
@@ -167,10 +167,21 @@
         <div class="dot" data-index="1"></div>
         <div class="dot" data-index="2"></div>
         <div class="dot" data-index="3"></div>
+        <div class="dot" data-index="4"></div>
     </div>
 
     <script>
         const contents = [
+        {
+            date: "20250724",
+            content: `<h1>キルレートの話</h1>
+<p>FPSにはだいたいキルレートという指標がある。KillsをDeathsで割ったもので、要は1Deathあたりに何キルできたかという、単純なその人の強さを測る指標としても使われるだろう。</p>
+<p>このキルレート、Deathsが0だったらどうなるのだろう？たまにすごくうまくできたマッチなどでDethsが０だったことは、FPSが少し上手い人ならあるだろう。このとき、キルレートというのはどのように計算されるのだろうか。</p>
+<p>通常、数字を０で除算することはできない。無限大になってしまうからだ。正しい値が得られなくなる。では１で割るか？5/0のプレイヤーが5/1のプレイヤーと同じどちらも5.00のキルレートになるというのは、納得できないプレイヤーもいるだろう。</p>
+<p>実情として、この実装はゲームによるようだ。実際１で割っているゲームもあるらしいし、5/0のときは「5.00ex」のように表記するゲームもあるらしい。「5.00ex」は、「5.00」よりスゴイ、というわけだ。</p>
+<p>また、そもそも「マッチ単位でキルレートを出すのがおかしい」という考え方もある。キルレートはそれ自体がある程度プレイヤーの強さを示す指標である以上、１試合の結果で算出**すべき**ものではない。強さなんて言うのは、マッチ単位では測れないからだ。だから、たとえば５０戦とか１００戦とか、キルレートの算出には一定の試合数をこなす（さすがにそれだけすれば、Deathsも一定数あるだろう）必要がある、という前提とするのだ。つまり生涯戦績なり、シーズン戦績なり、ある程度の期間かつある程度のマッチ履歴のあるプレイヤーになってはじめて、そのプレイヤーのキルレートが算出される、という仕組みになっている。</p>
+<p>よくよく考えればそれが当たり前というか、そうするしかないというか、そんなもんだが、案外考えてみないと分からないことは身近にいろいろあるものだ。</p>`
+        },
         {
             date: "20250723",
             content: `<h1>ひさしぶりにBGAを開いたってワケ</h1>
